--- a/ng-sight/package.json
+++ b/ng-sight/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "bootstrap": "^4.0.0-beta",
+    "chart.js": "^2.9.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.11.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
