--- a/ng-sight/package.json
+++ b/ng-sight/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.4.2",
     "popper.js": "^1.11.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
