--- a/ng-sight/Advantage.API/Advantage.API.csproj
+++ b/ng-sight/Advantage.API/Advantage.API.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="2.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
