--- a/ng-sight/package.json
+++ b/ng-sight/package.json
@@ -26,6 +26,7 @@
     "ng2-charts": "^2.4.2",
     "popper.js": "^1.11.0",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
